Name:          explicit-sharing
Version:       0.10
Cabal-Version: >= 1.10
Synopsis:      Explicit Sharing of Monadic Effects
Description:   

  This package implements a monad for non-deterministic computations
  with sharing.

Category:      Control, Monads
License:       MIT
License-File:  LICENSE
Author:        Chung-chieh Shan, Oleg Kiselyov, and Sebastian Fischer
Maintainer:    sebf@informatik.uni-kiel.de
Homepage:      http://sebfisch.github.com/explicit-sharing
Bug-Reports:   http://github.com/sebfisch/explicit-sharing/issues
Build-Type:    Custom
Stability:     experimental

Extra-Source-Files: Test.hs, permsort.hs, reverse.hs, last.hs

Library
  Build-Depends:    base >=4.9 && <5.0, containers, mtl

  Exposed-Modules:  Control.Monad.Sharing,
                    Control.Monad.Sharing.Classes,
                    Data.Monadic.List

  Other-Modules:    Control.Monad.Sharing.Implementation.CPS

  Ghc-Options:      -Wall -fno-warn-name-shadowing
  
  Extensions:       ExistentialQuantification,
                    MultiParamTypeClasses,
                    FlexibleInstances,
                    FlexibleContexts,
                    RelaxedPolyRec,
                    Rank2Types

Source-Repository head
  type:     git
  location: git@github.com:ManuelVs/explicit-sharing.git
